---
title: Warehouse Management System ERD
config:
  theme: neutral
  layout: elk
---
erDiagram
    roles ||--o{ users : "assigned to"
    items ||--o{ item_request_details : "recorded in"
    items ||--|| units : "measured by"
    users ||--o{ item_requests : "creates request"
    users ||--o{ item_requests : "responds"
    users ||--o{ item_additions : "performs addition"
    item_requests ||--o{ item_request_details : "has details"
    item_additions ||--o{ item_addition_details : "has details"
    items ||--o{ item_addition_details : "added to"
    
    stock_adjustments }o--|| users : "create"
    stock_adjustment_reasons ||--o{ stock_adjustment_details : "attached"
    stock_adjustments ||--|{ stock_adjustment_details : "datailed"
    stock_adjustment_details }o--|| items : "recorded in"

    users ||--o{ stock_adjustments : "approves"  

    users ||--o{ stock_opname : "responds to opname"
    stock_opname_details }o--|| items : "written in"
    stock_opname }o--|| users : "create"
    stock_opname ||--|{ stock_opname_details : "detailed"
    opname_reasons ||--o{ stock_opname_details : "attached in"
    
    roles {
        id VARCHAR(100) PK
        name VARCHAR(100) UK
    }
    
    users {
        id VARCHAR(100) PK
        name VARCHAR(255)
        username VARCHAR(255) UK
        password VARCHAR(100)
        role_id VARCHAR(100) FK
        profile_photo_path VARCHAR(100)
        telepon VARCHAR(20)
        created_at DATETIME
        updated_at DATETIME 
        deleted_at DATETIME 
    }
    
    notifications {
        id VARCHAR(100) PK
        type VARCHAR(100) 
        notifiable_id CHAR(64)
        notifiable_type VARCHAR(255)
        data TEXT
        read_at DATETIME
        created_at DATETIME 
        updated_at DATETIME 
    }
    
    items {
        id VARCHAR(100) PK 
        name VARCHAR(100)
        unit_id VARCHAR(100) FK 
        specification_name VARCHAR(255) 
        stock INTEGER 
        price DECIMAL(20_2)
        created_at DATETIME 
        updated_at DATETIME 
        deleted_at DATETIME 
    }

    settings {
        id VARCHAR(100) PK
        icon VARCHAR(500)
        logo VARCHAR(500)
        application_name VARCHAR(255) 
        institution_name VARCHAR(255)
        institution_address TEXT 
        institution_phone VARCHAR(20)
        stock_adjustment_approval BOOLEAN
        stock_opname_approval BOOLEAN
        created_at DATETIME 
        updated_at DATETIME 
    }
    
    units {
        id VARCHAR(100) PK 
        name VARCHAR(255)
        created_at DATETIME 
        updated_at DATETIME 
        deleted_at DATETIME
    }
    
    item_requests {
        id VARCHAR(100) PK 
        requester_id VARCHAR(100) FK 
        status ENUM 
        request_date DATE
        responder_id VARCHAR(100) FK 
        responder_notes TEXT 
        response_date DATE
        created_at DATETIME 
        updated_at DATETIME 
    }
    
    item_request_details {
        id VARCHAR(100) PK  
        item_request_id VARCHAR(100) FK 
        item_id VARCHAR(100)  FK
        requested_quantity INTEGER 
        received_quantity INTEGER 
        price DECIMAL(20_2)
        created_at DATETIME
        updated_at DATETIME
    }
    
    item_additions {
        id VARCHAR(100) PK
        user_id VARCHAR(100) FK 
        addition_date DATE
        created_at DATETIME
    }
    
    item_addition_details {
        id VARCHAR(100) PK  
        item_addition_id VARCHAR(100) FK
        item_id VARCHAR(100) FK
        quantity INTEGER 
        price DECIMAL(20_2)
        created_at DATETIME
    }

    stock_adjustment_reasons {
        id VARCHAR(100) PK
        reason VARCHAR(100) UK
        created_at DATETIME
        updated_at DATETIME
        deleted_at DATETIME
    }

    stock_adjustments {
        id VARCHAR(100) PK
        user_id VARCHAR(100) FK
        stock_opname_id VARCHAR(100) FK "nullable, indicate generated by opname or not"
        status ENUM "pending,approved,rejected"
        notes TEXT
        responder_id VARCHAR(100) FK "id pengguna"
        responder_notes TEXT
        responded_at DATETIME
        created_at DATETIME
        updated_at DATETIME
    }

    stock_adjustment_details {
        id VARCHAR(100) PK
        stock_adjustment_id VARCHAR(100) FK
        item_id VARCHAR(100) FK
        old_stock INTEGER
        new_stock INTEGER
        price DECIMAL(20_2)
        reason_id VARCHAR(100) FK
        created_at DATETIME
        updated_at DATETIME
    }

    stock_opname {
        id VARCHAR(100) PK
        user_id VARCHAR(100) FK
        responder_id VARCHAR(100) FK
        status ENUM "pending,approved,rejected"
        opname_date DATETIME
        created_at DATETIME
        updated_at DATETIME
        responded_at DATETIME
    }

    stock_opname_details {
        id VARCHAR(100) PK
        stock_opname_id VARCHAR(100) FK
        item_id VARCHAR(100) FK
        system_stock INTEGER
        physical_stock INTEGER
        reason_id VARCHAR(100) FK
        remarks TEXT
        created_at DATETIME
        updated_at DATETIME
    }

    opname_reasons {
        id VARCHAR(100) PK
        reason VARCHAR(100) UK
        created_at DATETIME
        updated_at DATETIME
        deleted_at DATETIME
    }